CostalCloud/force-app/main/default/objects/WorkOrder/fields/License_Status_Client_Store__c.field-meta.xml
<CustomField>
    <fullName>License_Status_Client_Store__c</fullName>
    <formula>TEXT(Client_Store__r.Expired_Licenses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status Client/Store</label>
    <type>Text</type>
</CustomField>