CostalCloud/force-app/main/default/objects/WorkOrder/fields/License_Status_Installation_Company__c.field-meta.xml
<CustomField>
    <fullName>License_Status_Installation_Company__c</fullName>
    <formula>TEXT(Installer__r.Expired_Licenses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status Installation Company</label>
    <type>Text</type>
</CustomField>