CostalCloud/force-app/main/default/objects/WorkOrder/fields/Market_Name_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_Name_Unique_ID__c</fullName>
    <formula>Client_Store__r.Reporting_Market__r.Market_Name_Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Name Unique ID</label>
    <type>Text</type>
</CustomField>