CostalCloud/force-app/main/default/objects/WorkOrder/fields/Materials_Amount__c.field-meta.xml
<CustomField>
    <fullName>Materials_Amount__c</fullName>
    <label>Materials Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>