CostalCloud/force-app/main/default/objects/WorkOrder/fields/No_longer_Permit_100__c.field-meta.xml
<CustomField>
    <fullName>No_longer_Permit_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No longer Permit/&gt; 100</label>
    <type>Checkbox</type>
</CustomField>