CostalCloud/force-app/main/default/objects/WorkOrder/fields/Note_Past_Due_48_hrs__c.field-meta.xml
<CustomField>
    <fullName>Note_Past_Due_48_hrs__c</fullName>
    <formula>Hours_since_last_note__c  &gt; 48</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Past Due (48 hrs)</label>
    <type>Checkbox</type>
</CustomField>