CostalCloud/force-app/main/default/objects/WorkOrder/fields/Number_of_PO_Notes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PO_Notes__c</fullName>
    <label>Number of PO Notes</label>
    <summaryForeignKey>PO_Notes__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>