CostalCloud/force-app/main/default/objects/WorkOrder/fields/of_Attachment_File_Records__c.field-meta.xml
<CustomField>
    <fullName>of_Attachment_File_Records__c</fullName>
    <label># of Attachment/File Records</label>
    <summaryForeignKey>Attachment_Files__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>