CostalCloud/force-app/main/default/objects/WorkOrder/fields/of_Child_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>of_Child_Work_Orders__c</fullName>
    <label># of Child Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>