CostalCloud/force-app/main/default/objects/WorkOrder/fields/of_Merchandise_Items__c.field-meta.xml
<CustomField>
    <fullName>of_Merchandise_Items__c</fullName>
    <label># of Merchandise Items</label>
    <summaryForeignKey>Merchandise__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>