CostalCloud/force-app/main/default/objects/WorkOrder/fields/Optional_Labor_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Optional_Labor_Total_Cost__c</fullName>
    <description>Verified field values 6/30/2021</description>
    <inlineHelpText>Pulls from Labor line Extended Cost Field</inlineHelpText>
    <label>Optional Labor Total Cost</label>
    <summarizedField>Labor__c.Extended_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Labor__c.Type__c</field>
        <operation>equals</operation>
        <value>Optional Installs</value>
    </summaryFilterItems>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>