CostalCloud/force-app/main/default/objects/WorkOrder/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>