CostalCloud/force-app/main/default/objects/WorkOrder/fields/Other_Merchandise_Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Merchandise_Total_Cost_Amount__c</fullName>
    <label>Other Merchandise Total Cost Amount</label>
    <summarizedField>Merchandise__c.Cost_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Merchandise__c.API_Type_Name__c</field>
        <operation>contains</operation>
        <value>other</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchandise__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>