CostalCloud/force-app/main/default/objects/WorkOrder/fields/Overwrite_Reason_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Reason_Code_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite Reason Code 3</label>
    <type>Checkbox</type>
</CustomField>