CostalCloud/force-app/main/default/objects/WorkOrder/fields/overwrite_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>overwrite_Reason_Code__c</fullName>
    <label>overwrite Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>