CostalCloud/force-app/main/default/objects/WorkOrder/fields/Overwrite_Reason_code_seven__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Reason_code_seven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite Reason code &amp;</label>
    <type>Checkbox</type>
</CustomField>