CostalCloud/force-app/main/default/objects/WorkOrder/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <formula>ParentWorkOrder.RecordType.DeveloperName</formula>
    <label>Parent Type</label>
    <type>Text</type>
</CustomField>