CostalCloud/force-app/main/default/objects/WorkOrder/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>