CostalCloud/force-app/main/default/objects/WorkOrder/fields/Payment_Record__c.field-meta.xml
<CustomField>
    <fullName>Payment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Record</label>
    <referenceTo>Payment_Record__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>