CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Approval_Request_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Permit_Approval_Request_Submitted_By__c</fullName>
    <label>Permit Approval Request Submitted By</label>
    <type>Email</type>
</CustomField>