CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Attached__c.field-meta.xml
<CustomField>
    <fullName>Permit_Attached__c</fullName>
    <label>Permit Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>