CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Attached_Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Permit_Attached_Review_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Attached Review Request</label>
    <type>Checkbox</type>
</CustomField>