CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <label>Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>