CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Required_calculated__c.field-meta.xml
<CustomField>
    <fullName>Permit_Required_calculated__c</fullName>
    <inlineHelpText>If client/store (account) has a rules/regs record with matching Program, Category and svcCodeType.  If all of those are matching check the STATE on the Work Order and compare it to the rules/regs object.  If rules/regs object &quot;Installation_State_c&quot; field says &quot;Any&quot; or if it the state code is a direct match to the state on the work order (address field) then the work order is marked for &quot;Permit Required = Yes&quot;.</inlineHelpText>
    <label>Permit Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>