CostalCloud/force-app/main/default/objects/WorkOrder/fields/Permit_Sold__c.field-meta.xml
<CustomField>
    <fullName>Permit_Sold__c</fullName>
    <label>Permit Sold</label>
    <summaryFilterItems>
        <field>Labor__c.Type__c</field>
        <operation>equals</operation>
        <value>Optional Installs</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Labor__c.Description__c</field>
        <operation>contains</operation>
        <value>PERMIT</value>
    </summaryFilterItems>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>