CostalCloud/force-app/main/default/objects/WorkOrder/fields/Plumbing_Job_SKU__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Job_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plumbing Job SKU</label>
    <referenceTo>Job_SKU__c</referenceTo>
    <relationshipLabel>Work Orders (Plumbing Job SKU)</relationshipLabel>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>