CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Note_Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>PO_Note_Auto_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Note Auto Generated</label>
    <type>Checkbox</type>
</CustomField>