CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Note_AutoCreated__c.field-meta.xml
<CustomField>
    <fullName>PO_Note_AutoCreated__c</fullName>
    <description>Via trigger, if this field is populated, it will create PO Note for Work Order and then clear out this field.</description>
    <label>PO Note</label>
    <type>TextArea</type>
</CustomField>