CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Note_Subject_AutoCreate__c.field-meta.xml
<CustomField>
    <fullName>PO_Note_Subject_AutoCreate__c</fullName>
    <label>PO Note Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>