CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Notes_to_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>PO_Notes_to_Acknowledge__c</fullName>
    <label>PO Notes to Acknowledge</label>
    <summaryFilterItems>
        <field>PO_Notes__c.Acknowledged_Read__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>PO_Notes__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>