CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <externalId>true</externalId>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>