CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Reduced_by_Client__c.field-meta.xml
<CustomField>
    <fullName>PO_Reduced_by_Client__c</fullName>
    <formula>IF( Amount__c  &lt;  Original_Amount__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Reduced by Client?</label>
    <type>Checkbox</type>
</CustomField>