CostalCloud/force-app/main/default/objects/WorkOrder/fields/po_shortSkuDesc__c.field-meta.xml
<CustomField>
    <fullName>po_shortSkuDesc__c</fullName>
    <label>po.shortSkuDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>