CostalCloud/force-app/main/default/objects/WorkOrder/fields/PO_Updates__c.field-meta.xml
<CustomField>
    <fullName>PO_Updates__c</fullName>
    <label>PO Updates</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback Created</fullName>
            </value>
            <value>
                <fullName>Chargeback Needed</fullName>
            </value>
            <value>
                <fullName>Chargeback Review Needed</fullName>
            </value>
            <value>
                <fullName>Payment Issue is Resolved</fullName>
            </value>
            <value>
                <fullName>PO Marked as &quot;Canceled&quot; in Client System</fullName>
            </value>
            <value>
                <fullName>PO Marked as &quot;Changed&quot; in Client System</fullName>
            </value>
            <value>
                <fullName>PO Marked as &quot;Key-Rec&apos;ed&quot; in Client System</fullName>
            </value>
            <value>
                <fullName>PO Marked as &quot;Not Found&quot; in Client System</fullName>
            </value>
            <value>
                <fullName>PO Not Marked as &quot;Key-Rec&apos;ed&quot; in Client System</fullName>
            </value>
            <value>
                <fullName>Unapproved Chargeback</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Changed</fullName>
                <isActive>false</isActive>
                <label>Changed</label>
            </value>
            <value>
                <fullName>Key-Rec&apos;ed</fullName>
                <isActive>false</isActive>
                <label>Key-Rec&apos;ed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>