CostalCloud/force-app/main/default/objects/WorkOrder/fields/poCreationdate__c.field-meta.xml
<CustomField>
    <fullName>poCreationdate__c</fullName>
    <label>poCreationdate</label>
    <type>Date</type>
</CustomField>