CostalCloud/force-app/main/default/objects/WorkOrder/fields/POStatus__c.field-meta.xml
<CustomField>
    <fullName>POStatus__c</fullName>
    <inlineHelpText>Comes from integration</inlineHelpText>
    <label>Client PO Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>