CostalCloud/force-app/main/default/objects/WorkOrder/fields/Pre_Renovation_Form__c.field-meta.xml
<CustomField>
    <fullName>Pre_Renovation_Form__c</fullName>
    <label>Pre-Renovation Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>