CostalCloud/force-app/main/default/objects/WorkOrder/fields/PreferredTimeToContact__c.field-meta.xml
<CustomField>
    <fullName>PreferredTimeToContact__c</fullName>
    <label>PreferredTimeToContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>