CostalCloud/force-app/main/default/objects/WorkOrder/fields/Primary_Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Based on program</inlineHelpText>
    <label>Primary Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>