CostalCloud/force-app/main/default/objects/WorkOrder/fields/Private_Note_AutoCreate__c.field-meta.xml
<CustomField>
    <fullName>Private_Note_AutoCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Note?</label>
    <type>Checkbox</type>
</CustomField>