CostalCloud/force-app/main/default/objects/WorkOrder/fields/Product_Correct__c.field-meta.xml
<CustomField>
    <fullName>Product_Correct__c</fullName>
    <label>Product Correct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>