CostalCloud/force-app/main/default/objects/WorkOrder/fields/Product_Received__c.field-meta.xml
<CustomField>
    <fullName>Product_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Received</label>
    <type>Checkbox</type>
</CustomField>