CostalCloud/force-app/main/default/objects/WorkOrder/fields/Program_Code_for_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_for_Intacct__c</fullName>
    <formula>IF(ISPICKVAL(Job_SKU_lookup__r.Program__c  , &quot;Doors&quot;), &quot;Doors&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c  , &quot;Large Projects&quot;) , &quot;Large Projects&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c , &quot;Closets&quot;) , &quot;Closets&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c  , &quot;Windows&quot;) , &quot;WND&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c  , &quot;Murhpy Doors&quot;) , &quot;Murphy Doors&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c , &quot;Kitchens&quot;) , &quot;KCTI&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c , &apos;Window Treatments&apos;) , &quot;MWNDT&quot;,
IF(ISPICKVAL(Job_SKU_lookup__r.Program__c , &apos;HDIS&apos;) , &quot;HDIS&quot;,
&apos;&apos;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code for Intacct</label>
    <type>Text</type>
</CustomField>