CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reason_for_Addl_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Addl_Charge__c</fullName>
    <label>Reason for Addl Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>