CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reason_for_no_bid__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_bid__c</fullName>
    <label>Reason for no bid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>