CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reason_for_no_Jobsite_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_Jobsite_Visit__c</fullName>
    <label>Reason for no Jobsite Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down Day</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
            <value>
                <fullName>Additional Labor</fullName>
            </value>
            <value>
                <fullName>Additional Mileage</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>