CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reason_for_no_measure_during_visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_measure_during_visit__c</fullName>
    <label>Reason for no measure during visit?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No-bid</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>