CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reduced_PO_needed__c.field-meta.xml
<CustomField>
    <fullName>Reduced_PO_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced PO needed</label>
    <type>Checkbox</type>
</CustomField>