CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reduced_PO_Received__c.field-meta.xml
<CustomField>
    <fullName>Reduced_PO_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced PO Received</label>
    <type>Checkbox</type>
</CustomField>