CostalCloud/force-app/main/default/objects/WorkOrder/fields/Regional_Admin__c.field-meta.xml
<CustomField>
    <fullName>Regional_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>