CostalCloud/force-app/main/default/objects/WorkOrder/fields/Regional_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Regional_Admin_Email__c</fullName>
    <label>Regional Admin Email</label>
    <type>Email</type>
</CustomField>