CostalCloud/force-app/main/default/objects/WorkOrder/fields/relatedCustomerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>relatedCustomerOrderNumber__c</fullName>
    <label>relatedCustomerOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>