CostalCloud/force-app/main/default/objects/WorkOrder/fields/relatedMeasurePONumber__c.field-meta.xml
<CustomField>
    <fullName>relatedMeasurePONumber__c</fullName>
    <label>relatedMeasurePONumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>