CostalCloud/force-app/main/default/objects/WorkOrder/fields/relatedPoNumber__c.field-meta.xml
<CustomField>
    <fullName>relatedPoNumber__c</fullName>
    <label>relatedPoNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>