CostalCloud/force-app/main/default/objects/WorkOrder/fields/Reporting_Market__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Market__c</fullName>
    <formula>Client_Store__r.Reporting_Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Market</label>
    <type>Text</type>
</CustomField>