CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>RFI_Adjustment_Amount__c</fullName>
    <label>RFI Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>