CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Amount_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>RFI_Amount_Grand_Total__c</fullName>
    <label>RFI Amount Grand Total</label>
    <summarizedField>Labor__c.TCS_Amount__c</summarizedField>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>