CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_CA__c.field-meta.xml
<CustomField>
    <fullName>RFI_CA__c</fullName>
    <label>RFI CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>