CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Division__c.field-meta.xml
<CustomField>
    <fullName>RFI_Division__c</fullName>
    <formula>Client_Store__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Division</label>
    <type>Text</type>
</CustomField>