CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Division_Manager__c.field-meta.xml
<CustomField>
    <fullName>RFI_Division_Manager__c</fullName>
    <formula>Client_Store__r.Division_Director__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Division Manager</label>
    <type>Text</type>
</CustomField>