CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Region__c.field-meta.xml
<CustomField>
    <fullName>RFI_Region__c</fullName>
    <formula>Client_Store__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Region</label>
    <type>Text</type>
</CustomField>