CostalCloud/force-app/main/default/objects/WorkOrder/fields/RFI_Reporting_Market__c.field-meta.xml
<CustomField>
    <fullName>RFI_Reporting_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Reporting Market</label>
    <referenceTo>RFI_Reporting_Markets__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>