CostalCloud/force-app/main/default/objects/WorkOrder/fields/RRP_Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>RRP_Exception_Request__c</fullName>
    <label>RRP Exception Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Labor - not disturbing any paint</fullName>
            </value>
            <value>
                <fullName>Exempt - disturbing less than x% of paint</fullName>
            </value>
            <value>
                <fullName>Year Home Built Corrected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>