CostalCloud/force-app/main/default/objects/WorkOrder/fields/RRP_Exception_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>RRP_Exception_Request_Status__c</fullName>
    <label>RRP Exception Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Data Entry</fullName>
            </value>
            <value>
                <fullName>Data Entry Approved</fullName>
            </value>
            <value>
                <fullName>Data Entry Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>