CostalCloud/force-app/main/default/objects/WorkOrder/fields/RRP_Exception_Request_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>RRP_Exception_Request_Submitted_By__c</fullName>
    <label>RRP Exception Request Submitted By</label>
    <type>Email</type>
</CustomField>