CostalCloud/force-app/main/default/objects/WorkOrder/fields/RRP_Required_Calculated__c.field-meta.xml
<CustomField>
    <fullName>RRP_Required_Calculated__c</fullName>
    <label>RRP Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Year Difference</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>