CostalCloud/force-app/main/default/objects/WorkOrder/fields/RRP_Test_Positive__c.field-meta.xml
<CustomField>
    <fullName>RRP_Test_Positive__c</fullName>
    <description>Count of RRP Test Kit Records that have a value of &quot;Positive&quot; in the &quot;Results_c&quot; field</description>
    <inlineHelpText>Count of RRP Test Kit Records that have a value of &quot;Positive&quot; in the &quot;Results_c&quot; field</inlineHelpText>
    <label>RRP Test Positive</label>
    <summaryFilterItems>
        <field>RRP_Test_Kits__c.Results__c</field>
        <operation>equals</operation>
        <value>Positive</value>
    </summaryFilterItems>
    <summaryForeignKey>RRP_Test_Kits__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>